[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
reqwest = { version = "0.11.22", features = ["cookies", "blocking"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
